# task-agent

./: README.md  aad.manifest.json  pyproject.toml  teamsapp.local.yml  teamsapp.yml
appPackage/: manifest.json
graph_api/: mail_inbox.py  teams_messages.py  teams_transcripts.py  todo_tasks.py
infra/: azure.parameters.json  azure.parameters.local.json
infra/botRegistration/: azurebot.bicep
src/: main.py  settings.py
todo_list_generation/: prompts.py  todo_list_generation.py  todo_list_model.py
